poke: support for --no-stdtypes
This patch adds support for a new command line option --no-stdtypes to
the poke CLI.

2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Use pk_compiler_new_with_flags.
	(NO_STDTYPES_ARG): Define.
	(parse_args_1): Handle NO_STDTYPES_ARG.
	(parse_args_2): Likewise.
	* poke/pk-hserver.pk: Do not use standard types.
	* poke/pk-settings.pk: Likewise.
	* poke/pk-dump.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-save.pk: Likewise.
	* poke/pk-scrabble.pk: Likewise.
	* poke/pk-diff.pk: Likewise.
	* pickles/diff.pk: Likewise.

--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -554,6 +554,10 @@ Do not load map-files automatically when poke opens IO spaces.
 @item --no-hserver
 Do not run the terminal hyperlinks server.
 
+@item --no-stdtypes
+Do not define standard Poke types (such as @code{int}, @code{char},
+@i{etc}) in the Poke incremental compiler.
+
 @item --quiet
 Be as terse as possible.
 
