--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/poke.c (initialize): Use pk_compiler_new_with_flags.
+	(NO_STDTYPES_ARG): Define.
+	(parse_args_1): Handle NO_STDTYPES_ARG.
+	(parse_args_2): Likewise.
+	* poke/pk-hserver.pk: Do not use standard types.
+	* poke/pk-settings.pk: Likewise.
+	* poke/pk-dump.pk: Likewise.
+	* poke/pk-copy.pk: Likewise.
+	* poke/pk-save.pk: Likewise.
+	* poke/pk-scrabble.pk: Likewise.
+	* poke/pk-diff.pk: Likewise.
+	* pickles/diff.pk: Likewise.
+
 2023-04-24  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* pickles/bpf.pk: Do not use "standard" types.
