--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.std/std-test.pk: Do not use "standard" types.
+
+2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* testsuite/lib/poke-pk.exp (tap_execute): Pass --no-stdtypes to
 	poke.
 	* pickles/asn1-ber.pk: Do not use "standard" types.
