--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2023-05-03  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Fix check for non-null
+	field name.
+	* testsuite/poke.pkl/ass-18.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2023-04-28  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/libpoke.c (pk_load): Fix returned value.
