--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-05-07  Patrick Trottier  <code@algolibre.net>
+
+	Various fixes in the manual.
+
 2023-05-03  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Fix check for non-null
