--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-05-13  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* doc/poke.texi (rtrace): New section.
+
+2023-05-13  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-insn.def (PKL_INSN_RTRACE): New instruction.
 	* libpoke/pvm.jitter (PVM_CALL): Push the caller's name in the
 	returnstack.
