--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2023-05-13  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for cgetn, nn,
+	nnn, eqi, eqiu, eql, eqlu, eqs, nei, neiu, nel, nelu, nes, lti,
+	ltiu, ltl, ltlu, lts, gti, gtiu, gtl, gtlu, gts.
+
+2023-05-13  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.h (PKL_AST_TYPE_FALLIBLE_UNKNOWN): Define.
 	(PKL_AST_TYPE_FALLIBLE_YES): Likewise.
 	(PKL_AST_TYPE_FALLIBLE_NO): Likewise.
