--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-05-13  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* NEWS: Add entries for 3.2.
+	* doc/gendocs_template (For version 3.2): Update version to 3.2.
+
 2023-05-03  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Fix check for non-null
