--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for subi, subiu,
+	subl and sublu.
+
+2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for gei, geiu,
 	gel, gelu, ges, lei, leiu, lel, lelu, les, eqc and nec.
 
