--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/base64.pk: New file.
+	* testsuite/poke.pickles/base64-test.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+	* doc/poke.texi (base64): New section.
+
+2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for subi, subiu,
 	subl and sublu.
 
