--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-05-15  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* pickles/coff.pk (COFF_File): Use pre-condition for optional
+	field opt_hdr.
+
 2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* pickles/base64.pk: New file.
