build: distribute base64.pk

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/Makefile.am (dist_pickles_DATA): Add base64.pk.
+
+2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/base64.pk (base64_decode): Simplify.
 
 2023-05-15  Jose E. Marchesi  <jemarch@gnu.org>
