--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.cmd/ios-2.pk: New test.
+	* testsuite/poke.cmd/ios-3.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-ios.c (pk_ios_init): New function.
 	(pk_ios_shutdown): Likewise.
 	(pk_ios_alien_token_handler): Likewise.
