--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-rt.pk (iosearch): New function.
+	* testsuite/poke.pkl/iosearch-1.pk: New test.
+	* testsuite/poke.pkl/iosearch-2.pk: Likewise.
+	* testsuite/poke.pkl/iosearch-3.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+	* doc/poke.texi (iosearch): New section.
+
+2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* testsuite/poke.cmd/ios-2.pk: New test.
 	* testsuite/poke.cmd/ios-3.pk: Likewise.
 	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
