--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,13 @@
 2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* etc/poke.rec (Alien tokens for IO space names: $<path/to/file>):
+	Remove as done.
+	(Auto-complete $<...> in the prompt): New todo.
+
+2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for instructions
 	`sconc', `and', `or', and `not'.
-
 
 2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>a
 
